change logo dir

--- a/layouts/taxonomy/tag.html
+++ b/layouts/taxonomy/tag.html
@@ -1,4 +1,5 @@
 <section id="main">
+    this is list of tag "{{ .Title }}"
     <div class="tags_list">
     <div class="tags_title"><span>{{ .Title }}</span></div>
     </div>
