--- a/layouts/taxonomy/tag.terms.html
+++ b/layouts/taxonomy/tag.terms.html
@@ -1,5 +1,6 @@
 <section id="main">
    <div>
+     this is list of all tags
      <h1 id="title">{{ .Title }}</h1>
      <div class="tags_list">
      {{ range $key, $value := .Data.Terms }}
