upload past fms

--- a/themes/castanet/layouts/partials/footer_scripts.html
+++ b/themes/castanet/layouts/partials/footer_scripts.html
@@ -15,15 +15,15 @@
         {{ end }}
         url: "{{ .Params.permalink }}",
         text: "{{ title .Title }}"
-      },
-      {
-        share: "linkedin",
-        logo: "fab fa-linkedin"
-      },
-      {
-        share: "pinterest",
-        logo: "fab fa-pinterest"
       }
+      // {
+      //   share: "linkedin",
+      //   logo: "fab fa-linkedin"
+      // },
+      // {
+      //   share: "pinterest",
+      //   logo: "fab fa-pinterest"
+      // }
     ],
     });
 </script>
