--- a/themes/hugo-material-docs/layouts/index.html
+++ b/themes/hugo-material-docs/layouts/index.html
@@ -9,6 +9,8 @@
 	<div class="backdrop-paper"></div>
 </div>
 
+aaaa
+
 <input class="toggle" type="checkbox" id="toggle-drawer">
 <input class="toggle" type="checkbox" id="toggle-search">
 <label class="toggle-button overlay" for="toggle-drawer"></label>
