--- a/themes/hugo-material-docs/layouts/podcast/single.html
+++ b/themes/hugo-material-docs/layouts/podcast/single.html
@@ -28,6 +28,18 @@
 
 			{{ .Content }}
 
+			<div class="card-audio-wrapper">
+				<audio
+					class="card-audio mejs-player"
+					controls=""
+					data-mejsoptions='{"alwaysShowControls": true, "alwaysShowHours": true, "enableAutosize": true, "features": ["playpause", "progress", "current", "duration", "volume", "speed"]}'
+					preload="auto"
+					src="{{ .Params.podcast.path }}"
+					width="100%"
+				>
+				</audio>
+			</div>
+
 			<aside class="copyright" role="note">
 				{{ with .Site.Params.copyright }}
 				&copy; {{ now.Format "2006" }} {{ . }} &ndash;
