--- a/themes/hugo-material-docs/layouts/static/single.html
+++ b/themes/hugo-material-docs/layouts/static/single.html
@@ -1,8 +1,7 @@
 {{ define "main" }}
-
 		<div class="wrapper">
 			<h1>{{ .Title }} {{ if .IsDraft }} (Draft){{ end }}</h1>
 
 			{{ .Content }}
-
+		</div>
 {{ end }}
