--- a/themes/hugo-material-docs/layouts/_default/list.html
+++ b/themes/hugo-material-docs/layouts/_default/list.html
@@ -1,23 +1,4 @@
-{{ partial "head" . }}
-
-<div class="backdrop">
-	<div class="backdrop-paper"></div>
-</div>
-
-<input class="toggle" type="checkbox" id="toggle-drawer">
-<input class="toggle" type="checkbox" id="toggle-search">
-<label class="toggle-button overlay" for="toggle-drawer"></label>
-
-<header class="header">
-	{{ partial "header" . }}
-</header>
-
-<main class="main">
-	<div class="drawer">
-		{{ partial "drawer" . }}
-	</div>
-
-	<article class="article">
+{{ define "main" }}
 		<div class="wrapper">
 			<h1>Pages in {{ .Title | singularize }}</h1>
 
@@ -42,16 +23,4 @@
 				<a href="http://github.com/digitalcraftsman/hugo-material-docs" target="_blank">Material</a> theme.
 			</aside>
 		</div>
-	</article>
-
-	<div class="results" role="status" aria-live="polite">
-		<div class="scrollable">
-			<div class="wrapper">
-				<div class="meta"></div>
-				<div class="list"></div>
-			</div>
-		</div>
-	</div>
-</main>
-
-{{ partial "footer_js" . }}
+{{ end }}
