--- a/themes/hugo-material-docs/layouts/podcast/list.html
+++ b/themes/hugo-material-docs/layouts/podcast/list.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
 		<div class="wrapper">
-			<h1>Pages in {{ .Title | singularize }}</h1>
+			<h1>{{ .Title | singularize }} Episodes</h1>
 
 			{{ range .Data.Pages }}
 			<a href="{{ .Permalink }}" title="{{ .Title }}">
