--- a/themes/hugo-material-docs/layouts/podcast/single.html
+++ b/themes/hugo-material-docs/layouts/podcast/single.html
@@ -2,8 +2,6 @@
 		<div class="wrapper">
 			<h1>{{ .Title }} {{ if .IsDraft }} (Draft){{ end }}</h1>
 
-			{{ .Content }}
-
 			<div class="card-audio-wrapper">
 				<audio
 					class="card-audio mejs-player"
@@ -11,10 +9,11 @@
 					data-mejsoptions='{"alwaysShowControls": true, "alwaysShowHours": true, "enableAutosize": true, "features": ["playpause", "progress", "current", "duration", "volume", "speed"]}'
 					preload="auto"
 					src="{{ .Params.podcast.path }}"
-					width="100%"
-				>
-				</audio>
+					width="100%"/>
+				
 			</div>
+
+			{{ .Content }}
 
 			<footer class="footer">
 				{{ partial "footer" . }}
