--- a/themes/hugo-material-docs/layouts/podcast/list.html
+++ b/themes/hugo-material-docs/layouts/podcast/list.html
@@ -4,7 +4,9 @@
 
 			{{ range .Data.Pages }}
 			<a href="{{ .Permalink }}" title="{{ .Title }}">
-				<h2>{{ .Title }}</h2>
+				<h2>
+					{{ .Title }}
+				</h2>
 			</a>
 
 			<br>
